@@ -1,3 +1,6 @@
+2010-02-21
+	* Click-handler for second half of code-mark.
+	
 2010-02-14
 	* Add click handler to version and license.
 	* Move some files to inst dir to make it consistent with convention.
